--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -1,11 +1,9 @@
 [[redirects]]
-  from = "/firebasestorage/*"
-  to = "https://firebasestorage.googleapis.com/v0/b/138006763698/o/:splat"
+  from = "/*"
+  to = "/index.html"
   status = 200
-  force = true
-  headers = { X-From = "Netlify", Access-Control-Allow-Origin = "*" }
 
 [[headers]]
   for = "/*"
-  [headers.values]
+    [headers.values]
     Access-Control-Allow-Origin = "*"
